fix: update testdata to new data format
